# generalize_spatial_relations

./: CMakeLists.txt  L_dense.txt  README.md  features_all_downsampled1cm.txt  features_all_downsampled3cm.txt  simtrack_with_unit_gravity.txt
cmake_modules/: Findglog.cmake
include/: Features.h  Utils.h  VoxelObjects.h
src/: Features.cpp  VoxelObjects.cpp  imitateRelationFast.cpp
visualizations/: SURVEY.md
